[project]
name = "yazidansese"
version = "0.1.0"
description = "Yazıdan Sese"
readme = "README.md"
requires-python = ">=3.13"
LICENSE = "Apache-2.0"
dependencies = [
    "gradio>=4.0.0",
    "langdetect>=1.0.9",
    "num2words>=0.5.13", # Added for number-to-word conversion
    "numpy>=1.26.4",
    "nltk>=3.8.1",
    "sentencepiece>=0.1.99", # Required by some HuggingFace tokenizers
    "tiktoken>=0.9.0", # Fallback tokenizer backend for some HuggingFace models
    "protobuf", # Required by sentencepiece for some models
    "pydantic>=2.0,<=2.12.5",
    "pydub>=0.25.1",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "transformers>=4.41.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F: Pyflakes/Error, I: isort, N: pep8-naming, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
